# biases-llm

./: .gitignore  LICENSE  README.md
backend/: .env-example  config.py  main.py  pyproject.toml  requirements.txt
backend/api/: routes.py
backend/biases_llm/: __init__.py  config.py  main.py
backend/biases_llm/api/: routes.py
backend/biases_llm/models/: schemas.py
backend/biases_llm/services/: anthropic_adapter.py  llm_adapter.py  llm_orchestrator.py  openai_adapter.py  transformers_adapter.py
backend/services/: anthropic_adapter.py  llm_adapter.py  llm_orchestrator.py  openai_adapter.py
config/: bias_test_prompts.json  bias_test_prompts_v2.json  default_models copy.json  default_models.json
frontend/: index.html
frontend/js/: api-client.js  app.js  comparison-view.js  ui-manager.js
