[project]
name = "biases_llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.8.0",
    "pydantic-settings",
    "python-dotenv",
    "openai",
    "anthropic",
    "httpx",
    "aiofiles"
]
